# taras

./: .dockerignore  .env.example  .gitignore  .project  Dockerfile  README.md  aws-key.pem  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.test.yml  docker-compose.yml  git_logs.txt  main.py  pyproject.toml  run.bat
.github/workflows/: ci.yml  deploy-aws.yml  terraform-plan.yml
.github/workfrows/: deploy.yml
alembic/: env.py
alembic/versions/: 20260519_0001_initial_schema.py  20260521_0001_initial_users_posts.py  20260521_0002_add_username.py
app/: main.py
app/api/: auth_cookies.py  deps.py
app/core/: config.py  exceptions.py  security.py
app/crud/: __init__.py  base.py  crud_order.py  crud_order_item.py  crud_post.py  crud_user.py  crud_user_profile.py
app/db/: seed.py  session.py
app/models/: __init__.py  category.py  order.py  order_item.py  post.py  product.py  user.py  user_profile.py
app/schemas/: __init__.py  auth.py  category.py  order.py  order_item.py  post.py  product.py  user.py  user_profile.py
app/services/: __init__.py  auth_service.py  category_service.py  order_service.py  product_service.py  user_service.py
app/storage/: __init__.py  user_memory.py
app/utils/: email.py
docs/: LAB2.md  LAB2_COMMANDS.txt  LAB3.md  LAB4.md  LAB5.md  LAB6.md  LAB7.md  LAB8.md  LAB_GIT.md  pip_list.txt
marine-site/: index.html
scripts/: deploy-aws.ps1  docker-entrypoint.sh  docker-fix-and-start.ps1  start-all.ps1  start-local.ps1  start-monitoring.ps1
tests/: conftest.py  helpers.py  test_health.py
(+52 files in other folders)
