[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "Scalable FastAPI project template"
authors = ["Denis <denic842rb@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.136.1"
uvicorn = { extras = ["standard"], version = "^0.47.0" }
pydantic-settings = "^2.13.0"
pydantic = { extras = ["email"], version = "^2.13.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
asyncpg = "^0.31.0"
alembic = "^1.18.0"
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
httpx = "^0.28.0"
ruff = "^0.15.0"
aiosqlite = "^0.22.0"
pytest-asyncio = "^1.3.0"

[tool.poetry.scripts]
serve = "app.main:run"
start = "app.main:run"
seed-db = "app.db.seed:run"
test = "pytest:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
